--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-This project seems to join https://github.com/raphaelDuff/order with https://github.com/raphaelDuff/orderShiny, creating an R Shiny app with unit tests and views separated in modules.
+This project joins https://github.com/raphaelDuff/order with https://github.com/raphaelDuff/orderShiny, creating an R Shiny app with unit tests and views separated in modules.
 
 The app contains 3 tabs:
 
